tests/analyzer/errors/enum_literals.ray
enum Marker { circle, cross }
fn main() {
    var foo = .bar
    var bar: int = .baz

    var marker: Marker = .triangle

    var marker: Marker = .circle
    print marker.cross
}
